# Skeletonization

./: .gitignore  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  README.md  skeletonizer_config.json  vcpkg-configuration.json  vcpkg.json
SkeletonizationCLI/: CMakeLists.txt  main.cpp  vcpkg-deps.cmake
SkeletonizationCLI/source/: benchmark_manager.ixx  benchmark_runner.ixx  commandline_parser.ixx  image_viewer.ixx  skeletonizer_registry.ixx
SkeletonizationCLI/source/benchmark/: aggregator.ixx  exporter.ixx  helpers.ixx  manager.ixx  mod.ixx  runner.ixx
SkeletonizationCLI/source/commandline/: arguments.ixx  mod.ixx  parser.ixx
SkeletonizationCLI/source/configuration/: creators.ixx  loader.ixx  mod.ixx  parser.ixx  skeletonizer_registry.ixx
SkeletonizationCLI/source/logger/: logger.ixx
SkeletonizationCLI/source/visual_inspector/: image_container.ixx  mod.ixx  visualiser.ixx
SkeletonizationCLI/src/benchmark/: aggregator.cpp  benchmark_executor.cpp  benchmark_registry.cpp  exporter.cpp  helpers.cpp  manager.cpp  result_presenter.cpp  runner.cpp
SkeletonizationCLI/src/commandline/: arguments.cpp  parser.cpp
SkeletonizationCLI/src/configuration/: creators.cpp  loader.cpp  parser.cpp
SkeletonizationCLI/src/logger/: logger.cpp
SkeletonizationCLI/src/utils/: base64_encoder.cpp  opencv_image_loader.cpp  standard_image_preprocessor.cpp  system_browser_launcher.cpp
SkeletonizationCLI/src/visual_inspector/: image_container.cpp  visualiser.cpp
SkeletonizationCore/: CMakeLists.txt  vcpkg-deps.cmake
SkeletonizationCore/source/: skeletonizer_cpu.ixx
SkeletonizationCore/source/algorithms/: choi_lam_siu.ixx  choi_lam_siu_threads.ixx  guo_hall_cpu.ixx  guo_hall_cpu_threads.ixx  han_la_rhee_cpu.ixx  han_la_rhee_threads.ixx  hesselink_roerdink_cpu.ixx  hesselink_roerdink_cpu_threads.ixx  k3m_cpu.ixx  kmm_cpu.ixx  kwon_kang_cpu.ixx  kwon_kang_cpu_threads.ixx  liu_zhang.ixx  liu_zhang_threads.ixx  mod.ixx  petrosino_salvi_cpu.ixx  petrosino_salvi_thread.ixx  petrosino_salvi_threads.ixx  skeletonizer_cpu.ixx  tarabek_cpu.ixx  tarabek_threads.ixx  zhang_suen_cpu.ixx  zhang_suen_cpu_threads.ixx
SkeletonizationCore/source/extensions/: pipeline.ixx  string.ixx
SkeletonizationCore/source/skeletonizer/: backend.ixx  mod.ixx  skeletonizer.ixx
SkeletonizationCore/src/extensions/: image_processing.cpp  standard_image_processor.cpp
SkeletonizationCore/src/logger/: logger.cpp
SkeletonizationCoreCPU/: CMakeLists.txt
SkeletonizationCoreCPU/include/SkeletonizationCoreCPU/: choi_lam_siu.hpp  guo_hall.hpp  han_la_rhee.hpp  k3m.hpp  kmm.hpp  kwon_gi_kang.hpp  kwon_kang.hpp  lantuejoul.hpp  liu_zhang.hpp  petrosino_salvi.hpp  tarabek.hpp  zhang_suen.hpp
SkeletonizationCoreCPU/source/algorithms/: choi_lam_siu.ixx  guo_hall_cpu.ixx  han_la_rhee_cpu.ixx  k3m_cpu.ixx  kmm_cpu.ixx  kwon_kang_cpu.ixx  liu_zhang.ixx  mod.ixx  petrosino_salvi_cpu.ixx  tarabek_cpu.ixx  zhang_suen_cpu.ixx
SkeletonizationCoreCPU/src/: choi_lam_siu.cpp  guo_hal.cpp  guo_hall.cpp  han_la_rhee.cpp  k3m.cpp  kmm.cpp  kwon_gi_kang.cpp  kwon_kang.cpp  lantuejoul.cpp  liu_zhang.cpp  petrosino_salvi.cpp  tarabek.cpp  zhang_suen.cpp
SkeletonizationCoreCommon/: CMakeLists.txt  vcpkg-deps.cmake
SkeletonizationCoreCommon/source/: image_processing.ixx  pipeline.ixx  skeletonizer.ixx  skeletonizer_factory.ixx
SkeletonizationCoreCommon/source/configuration/: creators.ixx  types.ixx
SkeletonizationCoreCommon/source/extensions/: pipeline.ixx  string.ixx
SkeletonizationCoreCommon/source/image_processing/: image_processing.ixx
SkeletonizationCoreCommon/source/skeletonizer/: algorithms.ixx  factory.ixx  mod.ixx  skeletonizer.ixx  skeletonizer_cpu.ixx  skeletonizer_gpu.ixx  (+1 more)
SkeletonizationCoreGPU/: CMakeLists.txt  vcpkg-deps.cmake
SkeletonizationCoreGPU/source/: skeletonizer_gpu.ixx
SkeletonizationCoreGPU/src/: choi_lam_siu.cu  guo_hall.cu  han_la_rhee.cu  kwon_gi_kang.cu  liu_zhang.cu  petrosino_salvi.cu  tarabek.cu  zhang_suen.cu
SkeletonizationCoreMT/: CMakeLists.txt
SkeletonizationCoreMT/src/: choi_lam_siu.cpp  guo_hall.cpp  han_la_rhee.cpp  kwon_gi_kang.cpp  kwon_kang.cpp  liu_zhang.cpp  petrosino_salvi.cpp  tarabek.cpp  zhang_suen.cpp
SkeletonizationPython/: CMakeLists.txt  vcpkg-deps.cmake
SkeletonizationPython/include/: bind_helpers.hpp  binders.hpp  concepts.hpp  name_utils.hpp  numpy_converter.hpp  registry.hpp  type_name.hpp
SkeletonizationPython/source/: skeletonization_wrapper.cpp  source.ixx
SkeletonizationPython/src/: skeletonization_wrapper.cpp
SkeletonizationTests/: CMakeLists.txt  vcpkg-deps.cmake
SkeletonizationTests/common/: asserts.ixx  image_factory.ixx  mod.ixx  normalize.ixx  params.ixx  runner.ixx  triples.ixx
SkeletonizationTests/tests/: cli_commandline_parser_tests.cpp  cli_configuration_loader_tests.cpp  cli_configuration_parser_tests.cpp  core_algorithm_factory_tests.cpp  core_class_name_tests.cpp  core_image_processing_tests.cpp  core_logger_tests.cpp  core_pipeline_tests.cpp  core_skeletonizer_type_tests.cpp  core_string_tests.cpp  core_type_name_tests.cpp  skeleton_equivalence_tests.cpp  worker_aws_sdk_initializer_tests.cpp  worker_configuration_tests.cpp  worker_console_ctrl_handler_tests.cpp  worker_image_service_tests.cpp  worker_job_processor_tests.cpp  worker_local_object_storage_tests.cpp  worker_rapidjson_job_deserializer_tests.cpp  worker_redis_adapter_tests.cpp  worker_redis_client_tests.cpp  worker_redis_ssl_tests.cpp  worker_redis_uri_tests.cpp  worker_result_publisher_tests.cpp  worker_s3_object_storage_tests.cpp  worker_skeletonization_processor_tests.cpp
SkeletonizationVisualizer/: .prettierrc  CMakeLists.txt  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
SkeletonizationVisualizer/public/: benchmark_data.json
SkeletonizationVisualizer/src/: constants.ts  index.css  main.tsx  types.ts  utils.ts
SkeletonizationWorker/: CMakeLists.txt  Dockerfile  main.cpp  vcpkg-deps.cmake
SkeletonizationWorker/source/: job.ixx  redis.ixx
SkeletonizationWorker/src/: configuration.cpp
(+441 files in other folders)
